<resources>
    <string name="app_name">Yoop</string>
    <string name="task_affinity_marketplace_flow">.marketplace_flow</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy.</string>
    <string name="auth_home_caption">By continuing, you agree to our</string>
    <string name="auth_signup_name_headline">Let’s take it from the top. What’s your name?</string>
    <string name="auth_signup_email_headline">Great name. What about your email address?</string>
    <string name="auth_signup_password_headline">Cool. Last step, set your password.</string>
    <string name="auth_signup_first_name">FIRST NAME (AS SHOWN ON ID*)</string>
    <string name="auth_signup_last_name">LAST NAME (AS SHOWN ON ID*)</string>
    <string name="auth_signup_password">PASSWORD</string>
    <string name="auth_signup_email">EMAIL ADDRESS</string>
    <string name="auth_signup_email_valid_error">This is not a valid email address.\nPlease try again.</string>
    <string name="auth_signup_email_error">This email is already tied to an account. Try logging in.</string>
    <string name="auth_signup_notes">* Some venues require photo ID.</string>
    <string name="auth_login_name_headline">Welcome back!\nYou know the drill.</string>
    <string name="auth_login_forgot_password">Forgot password?</string>
    <string name="auth_login_label">LOG IN</string>
    <string name="auth_signup_label">SIGN UP</string>
    <string name="auth_verify_signup_headline">You’re In!\nJust verify your email to make it official.</string>
    <string name="auth_verify_forgot_password_headline">Found it! Just verify your email to continue.</string>
    <string name="auth_verify_failed_headline">Womp womp.\nThis link has expired.</string>
    <string name="auth_verify_email">We sent an email to %s.</string>
    <string name="auth_verify_open_inbox">Open Inbox</string>
    <string name="auth_verify_resend_link">Resend Link</string>
    <string name="auth_verify_send_new_link">Send New Link</string>
    <string name="auth_verify_no_default_email">You don\'t have a default mailing app.</string>
    <string name="auth_forgot_password_headline">Forgot your password? No worries. Let’s find your account.</string>
    <string name="auth_reset_password_headline">Time to create a new password…</string>
    <string name="password_input_show">Show</string>
    <string name="password_input_hide">Hide</string>
    <string name="password_input_valid_chars">- 8 characters minimum</string>
    <string name="password_input_valid_nums">- 1 number</string>
    <string name="connection_error">There was a problem with the connection. Please try again.</string>
    <string name="connection_error_refresh">Refresh</string>
    <string name="menu_main_discover">DISCOVER</string>
    <string name="menu_main_my_tickets">MY TICKETS</string>
    <string name="menu_main_account">PROFILE</string>
    <string name="discover_filter_all_events">All Events</string>
    <string name="discover_app_bar_search">Search</string>
    <string name="discover_empty">Sorry, No events were found.</string>
    <string name="discover_clear_filters">Clear Filters</string>
    <string name="discover_pill_new">New</string>
    <string name="discover_pill_going">You\'re Going!</string>
    <string name="search_hint">Search</string>
    <string name="search_city_hint">Search for a city</string>
    <string name="search_events_hint">Search for events</string>
    <string name="search_use_current_location">Use Current Location</string>
    <string name="search_no_city_found">Could not find a city.</string>
    <string name="filter_headline">Filters</string>
    <string name="filter_title_location">Location</string>
    <string name="filter_title_sale_state">Ticket Sale State</string>
    <string name="filter_all_locations">All Locations</string>
    <string name="filter_specific_location">Specific Location</string>
    <string name="filter_all_tickets">All Tickets</string>
    <string name="filter_first_access_tickets">First Access Tickets</string>
    <string name="filter_on_sale_tickets">On-Sale Tickets</string>
    <string name="filter_done">Done</string>
    <string name="filter_radius_miles">Miles</string>
    <string name="event_landing_yoop_list">yoop List</string>
    <string name="event_landing_yoop_list_high_demand">yoop List 🔥</string>
    <string name="event_landing_yoop_list_dot">yoop List •\u0020</string>
    <string name="event_landing_on_sale">On-Sale</string>
    <string name="event_landing_on_sale_high_demand">On-Sale 🔥</string>
    <string name="event_landing_on_sale_demand_exceeds_supply">On-Sale 🚨</string>
    <string name="event_landing_on_sale_dot">On-Sale •\u0020</string>
    <string name="event_landing_opens_tomorrow">Opens tomorrow</string>
    <string name="event_landing_closes_tomorrow">Closes tomorrow</string>
    <string name="event_landing_closes">Closes %1$s</string>
    <string name="event_landing_opens">Opens %1$s</string>
    <string name="event_landing_discover_more">Discover</string>
    <string name="event_landing_transaction_ended">You\'re too late.</string>
    <string name="event_landing_share">Check it out: %1$s, %2$s, %3$s</string>
    <string name="event_landing_added_to_calendar">Added to\ncalendar!</string>
    <string name="event_landing_live">LIVE</string>
    <string name="event_landing_open_map">Open Map</string>
    <string name="event_landing_transaction_from">From</string>
    <string name="event_landing_my_requests">My Requests</string>
    <string name="event_landing_my_request">My Request</string>
    <string name="event_landing_join_list">Join The List!</string>
    <string name="event_landing_submit_offer">Submit Your Offer!</string>
    <string name="event_landing_join_list_update">Update Request</string>
    <string name="event_landing_submit_offer_update">Update Your Offer</string>
    <string name="event_landing_email_message">Verify your account to continue.\nWe sent an email to %1$s</string>
    <string name="event_landing_date_range">%1$s - %2$s</string>
    <string name="event_landing_transaction_artist_ask">Artist Ask:\u0020</string>
    <string name="event_landing_transaction_description">%1$dx %2$s</string>
    <string name="event_landing_transaction_each">ea</string>
    <string name="event_landing_transaction_chance_great">Your chances are great.</string>
    <string name="event_landing_transaction_chance_good">Your chances are good.</string>
    <string name="event_landing_transaction_chance_ok">Your chances are ok.</string>
    <string name="event_landing_transaction_chance_poor">Your chances are poor.</string>
    <string name="event_landing_transaction_another_request">Make another request</string>
    <string name="event_landing_transaction_another_offer">Make another offer</string>
    <string name="event_landing_transaction_more_events">More Events</string>
    <string name="event_landing_transaction_more_tickets">GET MORE TICKETS</string>
    <string name="event_landing_transaction_closed">Closed</string>
    <string name="event_landing_transaction_pending">Pending Results</string>
    <string name="event_landing_transaction_my_offers">My Offers</string>
    <string name="event_landing_transaction_my_offer">My Offer</string>
    <string name="event_landing_you_re_going">You\'re going!</string>
    <string name="event_landing_transaction_pending_paid">Tickets secured! Assignment pending</string>
    <string name="event_landing_disclaimer_title">Getting into the Show</string>
    <string name="event_landing_disclaimer_subtitle">Your face is your ticket!</string>
    <string name="event_landing_disclaimer_description">Ditching barcodes means increased event security and easier access for you. Just bring your phone with Bluetooth on and a photo ID if you’re not verified. That’s it!</string>
    <string name="event_landing_assigned_tickets">%1$d of %2$d tickets assigned</string>
    <string name="event_landing_token_bring_id">BRING ID</string>
    <string name="transition_name_search_box">search_box</string>
    <string name="transition_name_search_box_icon">search_box_icon</string>
    <string name="transition_name_search_box_text">search_box_text</string>
    <string name="transition_name_performer_picture">performer_picture</string>
    <string name="transition_name_profile_picture">profile_picture</string>
    <string name="transition_name_loop_line">loop_line</string>
    <string name="transaction_details_price_min_ask">Minimum Ask</string>
    <string name="transaction_details_price_list">List Price</string>
    <string name="transaction_details_sort_by">Sorted by %1$s</string>
    <string name="transaction_details_sort_min_ask">By Minimum Ask</string>
    <string name="transaction_details_sort_avg_offer">By Average Offer</string>
    <string name="transaction_details_sort_price_full">List Price (Low to High)</string>
    <string name="transaction_details_sort_demand_full">Demand (High to Low)</string>
    <string name="transaction_details_ticket_available">List Tickets:</string>
    <string name="transaction_details_avg_offer">Avg Offer:</string>
    <string name="transaction_details_min_offer">Min Offer:</string>
    <string name="transaction_count_headline">How many tickets?</string>
    <string name="transaction_count_headline_input">How much per ticket?</string>
    <string name="transaction_count_list_price">List Price</string>
    <string name="transaction_count_min_ask">Min Ask</string>
    <string name="transaction_count_demand_high">High Demand</string>
    <string name="transaction_count_demand_exceeds_supply">Demand Exceeds Supply</string>
    <string name="transaction_count_list_tickets">List Tickets</string>
    <string name="transaction_count_avg_offer">Avg. Offer</string>
    <string name="transaction_count_min_offer">Min Offer</string>
    <string name="transaction_count_already_closed">Marketplace already closed.</string>
    <string name="transaction_count_closes_in_minutes">Closes in %dm</string>
    <string name="transaction_count_closes_in_seconds">Closes in %ds</string>
    <string name="transaction_count_tickets_limit">You’ve already requested %1$d of your %2$d available tickets for this event.</string>
    <string name="transaction_edit_save_changes">Save Changes</string>
    <string name="transaction_edit_delete_offer">Delete</string>
    <string name="transaction_edit_delete_request">Delete request?</string>
    <string name="transaction_edit_discard_changes">Discard changes?</string>
    <string name="transaction_edit_caption">You will lose your place in line.</string>
    <string name="transaction_edit_confirm_delete">Yes, Delete</string>
    <string name="transaction_edit_confirm_discard">Yes, Discard</string>
    <string name="transaction_edit_nevermind">Nevermind</string>
    <string name="transaction_edit_more_see_order_summary">See Order Summary</string>
    <string name="transaction_edit_more_cancel">Cancel</string>
    <string name="transaction_edit_more_list_request">List Request</string>
    <string name="transaction_edit_more_on_sale_offer">On-Sale Offer</string>
    <string name="transaction_review_auto_process_title">Auto-Process</string>
    <string name="transaction_review_subtotal">Subtotal</string>
    <string name="transaction_review_ticket_fee">Ticket Fee</string>
    <string name="transaction_review_total">Total</string>
    <string name="transaction_review_headline_list">If you’re selected, here’s what you’ll pay:</string>
    <string name="transaction_confirmation_list">You\'re on the List!\nWinners will be selected %1$s.</string>
    <string name="my_tickets_filter_all">All</string>
    <string name="my_tickets_filter_list">Yoop List</string>
    <string name="profile_unauth_login">Yep, Log In</string>
    <string name="profile_unauth_signup">Nope, I\'m New</string>
    <string name="profile_unauth_headline">Welcome! Have\nwe met before?</string>
</resources>