<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent"
    android:padding="32dp">

    <TextView
        style="@style/Text.Bold.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textColor="@color/color_white_alpha_50"
        android:text="@string/event_landing_disclaimer_title"/>

    <TextView
        style="@style/Text.Bold.Title.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_landing_disclaimer_subtitle"
        android:layout_marginTop="8dp"/>

    <TextView
        style="@style/Text.Medium.Medium.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/event_landing_disclaimer_description"/>

</LinearLayout>