<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="?android:attr/colorPrimary"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            style="@style/Text.Bold.Headline.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:text="@string/filter_headline" />

        <TextView
            style="@style/Text.Bold.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="48dp"
            android:letterSpacing="0.06"
            android:text="@string/filter_title_location"
            android:textAllCaps="true"
            android:textColor="@color/color_white_alpha_70" />

        <com.enovlab.yoop.ui.widget.FilterStateButton
            android:id="@+id/all_locations"
            style="@style/Button.State"
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/filter_all_locations" />

        <com.enovlab.yoop.ui.widget.ArrowFilterStateButton
            android:id="@+id/spec_location"
            style="@style/Button.State.Arrow"
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/filter_specific_location" />

        <LinearLayout
            android:id="@+id/container_radius_bar"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            android:gravity="center"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                style="@style/Text.Bold.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.06"
                android:text="@string/filter_radius_miles"
                android:textAllCaps="true"
                android:textColor="@color/color_white_alpha_70"
                android:layout_marginEnd="12dp"/>

            <com.warkiz.widget.IndicatorSeekBar
                android:id="@+id/radius_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isb_min="5"
                app:isb_max="150"
                app:isb_indicator_type="custom"
                app:isb_indicator_custom_layout="@layout/layout_filter_slider"
                app:isb_indicator_stay="true"
                app:isb_thumb_color="@color/color_white"
                app:isb_thumb_width="23dp"
                app:isb_track_progress_bar_color="@color/color_white"
                app:isb_track_background_bar_color="@color/color_white_alpha_20"
                app:isb_track_background_bar_size="2dp"
                app:isb_track_progress_bar_size="2dp"
                app:isb_track_rounded_corners="true"
                app:isb_seek_bar_type="continuous" />
        </LinearLayout>

        <TextView
            android:id="@+id/title_sale_state"
            style="@style/Text.Bold.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="32dp"
            android:letterSpacing="0.06"
            android:text="@string/filter_title_sale_state"
            android:textAllCaps="true"
            android:textColor="@color/color_white_alpha_70" />

        <com.enovlab.yoop.ui.widget.FilterStateButton
            android:id="@+id/all_tickets"
            style="@style/Button.State"
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/filter_all_tickets" />

        <com.enovlab.yoop.ui.widget.FilterStateButton
            android:id="@+id/first_access_tickets"
            style="@style/Button.State"
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/filter_first_access_tickets" />

        <com.enovlab.yoop.ui.widget.FilterStateButton
            android:id="@+id/on_sale_tickets"
            style="@style/Button.State"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/filter_on_sale_tickets" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/done"
            style="@style/Button.Accent"
            android:layout_width="154dp"
            android:layout_marginBottom="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:text="@string/filter_done"
            android:layout_gravity="bottom|end" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>