<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="@dimen/landing_transactions_height"
    android:background="?android:attr/colorPrimary"
    android:paddingStart="@dimen/padding_large"
    android:paddingEnd="@dimen/padding_default"
    android:paddingTop="@dimen/padding_default"
    android:paddingBottom="@dimen/padding_default"
    android:gravity="center"
    android:elevation="4dp">

    <ImageView
        android:id="@+id/transaction_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:src="@drawable/ic_list_white_26dp"
        tools:ignore="ContentDescription"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="12dp">

        <TextView
            android:id="@+id/transaction_name"
            style="@style/Text.Bold.Header.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            tools:text="@string/event_landing_yoop_list" />

        <TextView
            android:id="@+id/transaction_date"
            style="@style/Text.Medium.Medium.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/event_landing_opens_tomorrow" />

    </LinearLayout>

    <TextView
        android:id="@+id/added_to_calendar"
        style="@style/Text.Regular.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="12dp"
        android:text="@string/event_landing_added_to_calendar"
        android:textColor="@color/color_transactions_added_calendar"
        android:visibility="gone"
        tools:visibility="gone" />

    <ImageButton
        android:id="@+id/transaction_notification"
        style="@style/ImageButton"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_gravity="center"
        android:src="@drawable/ic_notification"
        android:visibility="gone"
        tools:visibility="gone"
        tools:ignore="ContentDescription"/>

    <com.enovlab.yoop.ui.widget.PriceButton
        android:id="@+id/transaction_price"
        style="@style/Button.Accent.Transactions.Price"
        tools:text="From $79"
        android:visibility="gone"
        tools:visibility="gone"/>

    <com.enovlab.yoop.ui.widget.MyRequestsButton
        android:id="@+id/transaction_my_request"
        style="@style/Button.Accent.Transactions.MyRequest"
        android:text="@string/event_landing_my_request"
        android:visibility="gone"
        tools:visibility="gone"/>

    <com.enovlab.yoop.ui.widget.MyOfferButton
        android:id="@+id/transaction_my_offer"
        style="@style/Button.Accent.Transactions.MyRequest.MyOffer"
        android:text="@string/event_landing_transaction_my_offer"
        android:visibility="gone"
        tools:visibility="visible"/>

    <Button
        android:id="@+id/transaction_more_events"
        style="@style/Button.Accent.Transactions"
        android:text="@string/event_landing_transaction_more_events"
        android:visibility="gone"
        tools:visibility="gone"/>

</LinearLayout>