<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/padding_large"
    android:paddingEnd="@dimen/padding_large"
    android:paddingBottom="@dimen/padding_large"
    android:focusableInTouchMode="true"
    tools:background="?android:attr/colorPrimary">

    <TextView
        android:id="@+id/headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/auth_signup_name_headline"
        android:textAppearance="@style/Text.Bold.Headline.White"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.enovlab.yoop.ui.widget.InputView
        android:id="@+id/input_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:hint="@string/auth_signup_first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headline" />

    <com.enovlab.yoop.ui.widget.InputView
        android:id="@+id/input_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:hint="@string/auth_signup_last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_first_name" />

</android.support.constraint.ConstraintLayout>
