<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="@color/colorPrimaryDark">

    <Button
        android:id="@+id/login"
        style="@style/Button.Accent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/auth_login_label"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toStartOf="@id/signup"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signup"
        style="@style/Button.Accent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/auth_signup_label"
        android:layout_marginStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/login" />

    <TextView
        android:id="@+id/caption"
        style="@style/Text.Medium.Caption.SemiWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/auth_home_caption"
        app:layout_constraintTop_toBottomOf="@id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/legal"
        style="@style/Text.Medium.Caption.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorLink="@color/color_white"
        app:layout_constraintTop_toBottomOf="@id/caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Terms of Service &amp; Privacy Policy." />

</android.support.constraint.ConstraintLayout>